fix one hour title image on mobile

--- a/source/stylesheets/bbl-basic.css.scss
+++ b/source/stylesheets/bbl-basic.css.scss
@@ -125,7 +125,7 @@ section.title {
 }
 
 section.actions {
- .title {
+ .download .title {
 		display: none;
 	}
 }
